# UI

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/SH/tb/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/SH/tb/: MainActivity.kt
app/src/main/java/com/SH/tb/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/SH/tb/ui/trades/: TradesScreen.kt
app/src/test/java/com/SH/tb/: ExampleUnitTest.kt
combined_ui/: index.html  script.js  styles.css
gradle/wrapper/: gradle-wrapper.properties
quant_project/: README.md  pyproject.toml
quant_project/config/: backtest.yaml  live_paper.yaml  settings.yaml
quant_project/core/: types.py  utils.py
quant_project/data_ingestion/: historical_client.py  live_stream.py  storage.py
quant_project/data_processing/: features.py  fractional_diff.py  pipelines.py
quant_project/execution/: exchange_client.py  order_manager.py
quant_project/interfaces/: api.py  cli.py
quant_project/labeling/: meta_labeling.py  triple_barrier.py
quant_project/ml_models/: registry.py  training.py  validation.py
quant_project/monitoring/: alerts.py  logging_config.py  metrics.py
quant_project/risk_management/: manager.py  rules.py
quant_project/scripts/: run_backtest.py  run_live_paper.py  run_train_model.py
quant_project/simulation/backtester/: engine.py  portfolio.py  reports.py
quant_project/simulation/live_paper/: paper_broker.py  runner.py  state.py
quant_project/strategy_engine/: base.py  position_sizing.py  prado_strategy.py
